@startuml

interface GuiFactory {
Button createButton()
Panel createPanel()
}

GuiFactory <|-- WindowsFactory
GuiFactory <|-- LinuxFactory

enum OS {
WINDOWS
LINUX
}

class GuiFactorySelector {
GuiFactory getFactory(OS os)
}

interface Component {
void paint()
}
interface Panel
interface Button

Button -down-|> Component
Panel -down-|> Component

WindowsButton -down-|> Button
LinuxButton -down-|> Button

WindowsPanel -down-|> Panel
LinuxPanel -down-|> Panel

GuiFactorySelector o-- WindowsFactory
GuiFactorySelector o-- LinuxFactory
GuiFactorySelector <- OS

WindowsFactory o-down- WindowsPanel
WindowsFactory o-down- WindowsButton

LinuxFactory o-down- LinuxPanel
LinuxFactory o-down- LinuxButton

note "Retornará el Factory solicitado" as NoteGuiFactorySelector
GuiFactorySelector .right. NoteGuiFactorySelector

note "Abstract Factory" as NoteGuiFactory
GuiFactory .left. NoteGuiFactory

note "return new WindowsButton()\nreturn new WindowsPanel()" as NoteWindowsFactory
WindowsFactory .right. NoteWindowsFactory

note "return new LinuxButton()\nreturn new LinuxPanel()" as NoteLinuxFactory
LinuxFactory .left. NoteLinuxFactory

@enduml